# Federated-Risk-Aware-Projection

./: README.md  pyproject.toml
code/: risk-aware-proj.ipynb
code/Client/: Client_Training_singlepass.py
rap-fl-project/code/Server/: Projection Server Side.py
rap-fl-project/rap_fl/client/: __init__.py
rap-fl-project/rap_fl/server/: __init__.py  strategy.py
rap_fl/: Rap-Wrapper-Notebook-Example.ipynb  __init__.py
rap_fl/client/: trainer.py
rap_fl/server/: utils.py
scratch/: test_rap_strategy.py  test_rap_trainer.py
