[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rap_fl"
version = "0.1.0"
description = "Federated Risk-Aware Projection (RAP-FL) for open-weight LLMs"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.0.0",
    "peft",
    "bitsandbytes",
    "flwr"
]